# clarity-inference-pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
dev/: axis_cluster_env.example.sh  check_gpu_env.sh  clarity_local_env_overrides.sh  docker-predict.sh  run_local_dicom_batch.sh  run_local_kits.sh  setup_local_models.sh  slurm_check_gpu.job  slurm_gpu_kits.job  slurm_s3_worker.env.example  slurm_s3_worker.job  slurm_xtreme_kits_cpu.job
dev/260501_legacy/: run_local_dicom_batch.sh  slurm_s3_worker.env  slurm_s3_worker.env.example
dev/260701_init/: check_gpu_env.sh  clarity_local_env_overrides.sh.example  setup.sh  slurm_s3_worker.env.example  slurm_s3_worker.job  slurm_s3_worker_cpu_defq.job
docker/: entrypoint.sh
paper_data/: inference_aggregated.json
src/axis_inference_pipeline/: __init__.py  axis_pn.py  cli.py  config.py  dicom.py  dicom_sitk.py  mask_adaptation.py  nifti_ct.py  nnunet_predict_compat.py  phase_gating.py  pipeline.py  pipeline_profile.py  totalsegmentator.py  tumor_segmentation.py  workspace.py
src/clarity_inference_pipeline/: __init__.py  clarity.py  cli.py  config.py  dicom.py  mask_adaptation.py  pipeline.py  pipeline_profile.py  s3_worker.py  subprocess_util.py  tcga_phase_gating.py  tcga_phase_prediction.py  totalsegmentator.py  tumor_segmentation.py  workspace.py
src/clarity_inference_pipeline/tcga_phase_swp/: __init__.py  inference_batch.py  v3_preprocess.py
src/segmentation_weighted_planes/: __init__.py  data_loader_v3_core.py  data_loader_v5.py  inference.py  mil_model.py
src/segmentation_weighted_planes/datasets/: __init__.py  nifti_manifest.py
src/segmentation_weighted_planes/projects/: __init__.py  pnvrn_nifti.py  tcga_phase.py
src/segmentation_weighted_planes/training/: __init__.py  training_parameters.py
tests/: test_mask_adaptation.py  test_pipeline_profile.py  test_s3_worker.py  test_series_selection.py  test_tcga_phase_device.py  test_totalsegmentator.py  test_tumor_segmentation.py  test_workspace.py
