[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarity-inference-pipeline"
version = "0.1.0"
description = "End-to-end DICOM-to-CLARITY pipeline and PNvsRN NIfTI inference (SWP stack)."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "tqdm",
    "scikit-learn",
    "albumentations>=1.3.0",
    "imageio>=2.25.0",
    "nibabel",
    "scipy",
    "opencv-python-headless",
    "typer>=0.9.0",
    "boto3",
    "pydicom>=2.4.0",
    "SimpleITK>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
clarity-pipeline = "clarity_inference_pipeline.cli:main"
clarity-nnunet-predict = "clarity_inference_pipeline.nnunet_predict_compat:main"
clarity-s3-worker = "clarity_inference_pipeline.s3_worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
